@@ -1,5 +1,9 @@
 2008-07-13  Albert Graef  <Dr.Graef@t-online.de>
 
+	* interpreter.cc (codegen): Streamline code for list and tuple
+	expressions. This works around some severe performance bugs in the
+	LLVM JIT, which gets awfully slow on deep call graphs.
+
 	* interpreter.cc (run): LLVM 2.3 requires that we add the default
 	shared library extension manually.
 
